[package]
name = "gp-research"
version = "0.1.0"
authors = ["josojo <josojo@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/route-comparison.rs"
name = "route-comparison"

[[bin]]
path = "src/changes_in_price_measurement.rs"
name = "changes_in_price_measurement"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.38"
